-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 15.0.0
-
-
99185d04e (16.0)
when opening an objective-cpp file in a project that has OBJCXX enabled as a first-class cmake language, a header is shown: "Warning: This file is not part of any project [...]"
if objcxx however is not enabled as language, the file is properly parsed.
–
observations:
- if objcxx is enabled, the c++ code model inspector in the attached project only has a C++ context
- if objcxx is not enabled, the c++ code model inspector shows two parse contexts (C++ and Obj-C+, where Obj-C+ self-identifies as CXX17 with ObjectiveC language extensions
- relates to
-
QTCREATORBUG-32212 clangd: objective-c headers not parsed as objective-c
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-32282 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
620437,3 | CMakePM: Add support for Objective C/C++ languages | 16.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |