CMakePM: Add support for Objective C/C++ languages

Fixes: QTCREATORBUG-32282
Change-Id: I034a6676b8eee83bc96df1f4d78361c045523a9f
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>